_generated-doc/2.13/config/quarkus-arc-config-group-arc-context-propagation-config.adoc

:summaryTableId: quarkus-arc-config-group-arc-context-propagation-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-arc-config-group-arc-context-propagation-config_configuration]]link:#quarkus-arc-config-group-arc-context-propagation-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc-config-group-arc-context-propagation-config_quarkus.arc.context-propagation.enabled]]`link:#quarkus-arc-config-group-arc-context-propagation-config_quarkus.arc.context-propagation.enabled[quarkus.arc.context-propagation.enabled]`

[.description]
--
If set to true and SmallRye Context Propagation extension is present then enable the context propagation for CDI contexts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===